@@ -38,7 +38,7 @@
   </parent>
   <groupId>org.apache.hbase</groupId>
   <artifactId>hbase</artifactId>
-  <version>3.0.0-alpha-4-SNAPSHOT</version>
+  <version>${revision}</version>
   <packaging>pom</packaging>
   <name>Apache HBase</name>
   <description>Apache HBase is the Hadoop database. Use it when you need
@@ -461,6 +461,12 @@
       <timezone>+8</timezone>
     </developer>
     <developer>
+      <id>shahrs87</id>
+      <name>Rushabh Shah</name>
+      <email>shahrs87@apache.org</email>
+      <timezone>-8</timezone>
+    </developer>
+    <developer>
       <id>sakthi</id>
       <name>Sakthi Vel</name>
       <email>sakthi@apache.org</email>
@@ -645,6 +651,12 @@
       <email>bbeaudreault@apache.org</email>
       <timezone>-5</timezone>
     </developer>
+    <developer>
+      <id>heliangjun</id>
+      <name>Liangjun He</name>
+      <email>heliangjun@apache.org</email>
+      <timezone>+8</timezone>
+    </developer>
   </developers>
   <mailingLists>
     <mailingList>
@@ -749,6 +761,7 @@
     </site>
   </distributionManagement>
   <properties>
+    <revision>3.0.0-alpha-4-SNAPSHOT</revision>
     <!-- override on command line to have generated LICENSE files include
          diagnostic info for verifying notice requirements -->
     <license.debug.print.included>false</license.debug.print.included>
@@ -768,7 +781,8 @@
     <compileSource>1.8</compileSource>
     <releaseTarget>8</releaseTarget>
     <!-- Build dependencies -->
-    <maven.min.version>3.0.4</maven.min.version>
+    <!-- The $revision feature is introduced in 3.5.0 -->
+    <maven.min.version>3.5.0</maven.min.version>
     <java.min.version>${compileSource}</java.min.version>
     <!-- Dependencies -->
     <hadoop-three.version>3.2.4</hadoop-three.version>
@@ -780,7 +794,12 @@
          comes in via hbase-thirdparty hbase-shaded-netty-->
     <netty.hadoop.version>3.10.5.Final</netty.hadoop.version>
     <!-- end HBASE-15925 default hadoop compatibility values -->
-    <audience-annotations.version>0.5.0</audience-annotations.version>
+    <audience-annotations.version>0.13.0</audience-annotations.version>
+    <!--
+      The version used when generating javadoc, 0.13.0 is the latest version which supports jdk8.
+      When building with jdk11, we will use 0.14.1, please see the build-with-jdk11 profile.
+    -->
+    <javadoc.audience-annotations.version>0.13.0</javadoc.audience-annotations.version>
     <avro.version>1.11.0</avro.version>
     <caffeine.version>2.8.1</caffeine.version>
     <commons-codec.version>1.13</commons-codec.version>
@@ -792,8 +811,8 @@
     <httpclient.version>4.5.13</httpclient.version>
     <httpcore.version>4.4.13</httpcore.version>
     <metrics-core.version>3.2.6</metrics-core.version>
-    <jackson.version>2.13.3</jackson.version>
-    <jackson.databind.version>2.13.3</jackson.databind.version>
+    <jackson.version>2.14.0</jackson.version>
+    <jackson.databind.version>2.14.0</jackson.databind.version>
     <jaxb-api.version>2.3.1</jaxb-api.version>
     <servlet.api.version>3.1.0</servlet.api.version>
     <wx.rs.api.version>2.1.1</wx.rs.api.version>
@@ -814,12 +833,13 @@
     <slf4j.version>1.7.30</slf4j.version>
     <clover.version>4.0.3</clover.version>
     <jamon-runtime.version>2.4.1</jamon-runtime.version>
-    <jettison.version>1.3.8</jettison.version>
+    <jettison.version>1.5.2</jettison.version>
     <!--Make sure these joni/jcodings are compatible with the versions used by jruby-->
     <joni.version>2.1.42</joni.version>
     <jcodings.version>1.0.56</jcodings.version>
     <spy.version>2.12.2</spy.version>
-    <bouncycastle.version>1.67</bouncycastle.version>
+    <bouncycastle.version>1.70</bouncycastle.version>
+    <skyscreamer.version>1.5.1</skyscreamer.version>
     <kerby.version>1.0.1</kerby.version>
     <commons-crypto.version>1.1.0</commons-crypto.version>
     <curator.version>4.2.0</curator.version>
@@ -833,7 +853,7 @@
     -->
     <checkstyle.version>8.29</checkstyle.version>
     <exec.maven.version>1.6.0</exec.maven.version>
-    <error-prone.version>2.10.0</error-prone.version>
+    <error-prone.version>2.16</error-prone.version>
     <jamon.plugin.version>2.4.2</jamon.plugin.version>
     <lifecycle.mapping.version>1.0.0</lifecycle.mapping.version>
     <maven.antrun.version>1.8</maven.antrun.version>
@@ -846,12 +866,12 @@
     <maven.project.info.report.version>3.1.2</maven.project.info.report.version>
     <os.maven.version>1.5.0.Final</os.maven.version>
     <findbugs-annotations.version>1.3.9-1</findbugs-annotations.version>
-    <spotbugs.version>4.7.2</spotbugs.version>
-    <spotbugs.maven.version>4.7.2.0</spotbugs.maven.version>
+    <spotbugs.version>4.7.3</spotbugs.version>
+    <spotbugs.maven.version>4.7.2.1</spotbugs.maven.version>
     <surefire.version>3.0.0-M6</surefire.version>
     <wagon.ssh.version>2.12</wagon.ssh.version>
     <xml.maven.version>1.0.1</xml.maven.version>
-    <spotless.version>2.24.1</spotless.version>
+    <spotless.version>2.27.2</spotless.version>
     <maven-site.version>3.12.0</maven-site.version>
     <!-- compression -->
     <aircompressor.version>0.21</aircompressor.version>
@@ -860,7 +880,7 @@
     <snappy.version>1.1.8.4</snappy.version>
     <xz.version>1.9</xz.version>
     <zstd-jni.version>1.5.0-4</zstd-jni.version>
-    <hbase-thirdparty.version>4.1.1</hbase-thirdparty.version>
+    <hbase-thirdparty.version>4.1.3</hbase-thirdparty.version>
     <!-- Intraproject jar naming properties -->
     <!-- TODO this is pretty ugly, but works for the moment.
       Modules are pretty heavy-weight things, so doing this work isn't too bad. -->
@@ -931,8 +951,7 @@
         this parameter by invoking mvn with -Dbuild.id=$BUILD_ID-->
     <build.id>${maven.build.timestamp}</build.id>
     <shell-executable>bash</shell-executable>
-    <!-- TODO HBASE-15041 clean up our javadocs so jdk8 linter can be used.
-         property as of javadoc-plugin 3.0.0 -->
+    <!-- Still need this to ignore some errors when building javadoc-->
     <doclint>none</doclint>
   </properties>
   <!-- Sorted by groups of dependencies then groupId and artifactId -->
@@ -1565,6 +1584,12 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.skyscreamer</groupId>
+        <artifactId>jsonassert</artifactId>
+        <version>${skyscreamer.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.bouncycastle</groupId>
         <artifactId>bcpkix-jdk15on</artifactId>
         <version>${bouncycastle.version}</version>
@@ -1765,8 +1790,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <source>${compileSource}</source>
-            <target>${compileSource}</target>
             <showWarnings>true</showWarnings>
             <showDeprecation>false</showDeprecation>
             <useIncrementalCompilation>false</useIncrementalCompilation>
@@ -2106,6 +2129,7 @@
         <version>1.3.0</version>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
+          <updatePomFile>true</updatePomFile>
         </configuration>
         <executions>
           <!-- enable flattening -->
@@ -2740,12 +2764,12 @@
               "* @throws ExceptionType"
               "* @return returnType"'
               Multiline to allow anchors on newlines
+              See https://errorprone.info/bugpattern/EmptyBlockTag
             -->
             <replaceRegex>
               <name>Remove unhelpful javadoc stubs</name>
               <searchRegex>(?m)^ *\* *@(?:param|throws|return) *\w* *\n</searchRegex>
-              <!-- spotless manve plugin does not allow empty here, so use \n -->
-              <replacement>\n</replacement>
+              <replacement/>
             </replaceRegex>
             <!--
               e.g., rewrite
@@ -2756,7 +2780,8 @@
                */
               to
               /** Returns blabla */
-              See https://errorprone.info/bugpattern/EmptyBlockTag
+              See https://errorprone.info/bugpattern/MissingSummary
+              https://google.github.io/styleguide/javaguide.html#s7.2-summary-fragment
             -->
             <replaceRegex>
               <name>Purge single returns tag multi line</name>
@@ -3007,7 +3032,7 @@
               <docletArtifact>
                 <groupId>org.apache.yetus</groupId>
                 <artifactId>audience-annotations</artifactId>
-                <version>${audience-annotations.version}</version>
+                <version>${javadoc.audience-annotations.version}</version>
               </docletArtifact>
               <useStandardDocletOptions>true</useStandardDocletOptions>
               <destDir>apidocs</destDir>
@@ -3064,7 +3089,7 @@
               <docletArtifact>
                 <groupId>org.apache.yetus</groupId>
                 <artifactId>audience-annotations</artifactId>
-                <version>${audience-annotations.version}</version>
+                <version>${javadoc.audience-annotations.version}</version>
               </docletArtifact>
               <useStandardDocletOptions>true</useStandardDocletOptions>
               <destDir>testapidocs</destDir>
@@ -3154,23 +3179,22 @@
     <profile>
       <id>build-with-jdk8</id>
       <activation>
-        <jdk>[1.8,)</jdk>
+        <jdk>1.8</jdk>
       </activation>
-      <build>
-        <pluginManagement>
-          <plugins/>
-        </pluginManagement>
-      </build>
+      <properties>
+        <maven.compiler.source>${compileSource}</maven.compiler.source>
+        <maven.compiler.target>${compileSource}</maven.compiler.target>
+      </properties>
     </profile>
     <profile>
       <id>build-with-jdk11</id>
       <activation>
-        <jdk>[1.11,)</jdk>
+        <jdk>[11,)</jdk>
       </activation>
       <properties>
         <maven.compiler.release>${releaseTarget}</maven.compiler.release>
         <!-- TODO: replicate logic for windows support -->
-        <argLine>-Dio.netty.tryReflectionSetAccessible=true
+        <argLine>-Dorg.apache.hbase.thirdparty.io.netty.tryReflectionSetAccessible=true
           --add-modules jdk.unsupported
           --add-opens java.base/java.nio=ALL-UNNAMED
           --add-opens java.base/sun.nio.ch=ALL-UNNAMED
@@ -3185,7 +3209,37 @@
           TODO: replicate logic for windows
         -->
         <surefire.Xmx>2200m</surefire.Xmx>
+        <!--
+          com.sun.javadoc and com.sun.tools.doclets are both deprecated in java 11 and will
+          fail the javadoc generating, so we need to use yetus 0.14.1 where it uses jdk.javadoc
+          and jdk.javadoc.doclet instead
+        -->
+        <javadoc.audience-annotations.version>0.14.1</javadoc.audience-annotations.version>
       </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <version>${maven.javadoc.version}</version>
+              <configuration>
+                <source>${compileSource}</source>
+                <!--
+                  Need to add this option to ignore the source errors, epsecially that we reference
+                  test code in hbase-testing-util's main code.
+                -->
+                <additionalOptions>--ignore-source-errors</additionalOptions>
+                <additionalJOptions>
+                  <additionalJOption>-J-Xmx2G</additionalJOption>
+                  <additionalJOption>-J--add-exports</additionalJOption>
+                  <additionalJOption>-Jjdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                </additionalJOptions>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
     <!-- profile activated by the Jenkins patch testing job -->
     <profile>
